2020-05-22 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_edit_array.c: Update copied function documentation.

    * src/x/x_edit_attrib.c: Reduce the scope of name and value pointers
      in x_dialog_attrib_edit_update_selection.

2020-05-16 Wiley E. Hill <wileyhill@gmail.com>

    * po/ar.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations
    * po/ru.po: Update Russian translations.
    * po/sl.po: Update Slovenian translations.
    * po/sv.po: Update Swedish translations.
    * po/tr.po: Update Turkish translations.
    * po/uk.po: Update Ukrainian translations.
    * po/zh_CN.po: Update Chinese simplified translations.
    * po/zh_TW.po: Update Chinese traditional translations.

2020-05-09 Wiley E. Hill <wileyhill@gmail.com>

    * po/el.po: Update Greek translations.
    * po/es.po: Update Spanish translations.
    * po/fr.po: Update French translations.
    * po/he.po: Update Hebrew translations.
    * po/hu.po: Update Hungarian translations.
    * po/it.po: Update Italian translations.
    * po/nl.po: Update Dutch translations.
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.

2020-05-02 Wiley E. Hill <wileyhill@gmail.com>

    * po/bg.po: Update Bulgarian translations.
    * po/bs.po: Update Bosnian translations
    * po/en_GB.po: Update Great Britain.
    * po/fa.po: Update Persian translations.
    * po/ja.po: Update Japanese translations.
    * po/kh.po: Update Khmer translations.
    * po/ml.po: Updated Malayalam translations.
    * po/pl.po: Update Polish translations.
    * po/tr.po: Update Turkish translations.

2020-04-25 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.
    * po/ar.po: Update Arabic translations.
    * po/ca.po: Update Catalan translations.
    * po/da.po: Update Danish translations.
    * po/de.po: Update German translations.
    * po/fi.po: Update Finnish translations.