@@ -3,7 +3,9 @@
     * src/x/x_edit_array.c: Update copied function documentation.
 
     * src/x/x_edit_attrib.c: Reduce the scope of name and value pointers
-      in x_dialog_attrib_edit_update_selection.
+      in x_dialog_attrib_edit_update_selection. Revise the conditional to
+      handle net type objects and when a net is selected prefill in the
+      attribute name with "netname" and set focus to the value entry.
 
 2020-05-16 Wiley E. Hill <wileyhill@gmail.com>
 
